Hotfix for Profile CSS & Uploading UI layouts
Hotfix for CSS Layouts not loading within the Profile page when loaded on a local host server

--- a/Frontend/profile.html
+++ b/Frontend/profile.html
@@ -1,5 +1,6 @@
-<!-- https://stackoverflow.com/questions/37983148/show-dynamic-content-in-bootstrap-modal-onclick-event -->
+
 <link rel="stylesheet" href="css/profile.css">
+<link rel="stylesheet" href="css/results.css">
 <div id="myModal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -32,7 +33,7 @@
                 </div>
               </div>
               <div class="close-profile">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                <button type="button" class="close" onclick="goTo('results.html')" >
                   <img src="assets/close.svg"></button>
               </div>
             </div>
