--- a/Frontend/results.html
+++ b/Frontend/results.html
@@ -33,16 +33,18 @@
        <div class="search-result-sentiment-title">Overall Sentiment:&nbsp;</div>
        <div class="search-result-sentiment">&#128512; Happy</div>
      </div>
+
      <div class="results-container" ></option>
        <div class="result-container">
          <div class="result-index">1</div>
          <div class="result">
-            <div class="result-title" onclick="showmodal()">Tweeter Handle:</div>
+            <div class="result-title" onclick="goTo('profile.html')">Tweeter Handle:</div>
             <div class="result-content">
               Process the results using the Java 8+ Streams API to add hyperlinks to user names, locations (if available), and hashtags (used in the individual parts detailed below).Note: for this assignment, you do not need to stream updates to the user interface. In other words, thefront-end page is static until a “refresh” (or new search) is triggered.
             </div>
          </div>
        </div>
+
        <div class="result-container">
          <div class="result-index">2</div>
          <div class="result">
@@ -52,6 +54,7 @@
             </div>
          </div>
        </div>
+
        <div class="result-container">
          <div class="result-index">3</div>
          <div class="result">
@@ -61,6 +64,7 @@
             </div>
          </div>
        </div>
+
        <div class="result-container">
          <div class="result-index">4</div>
          <div class="result">
@@ -70,6 +74,7 @@
             </div>
          </div>
        </div>
+
        <div class="result-container">
          <div class="result-index">5</div>
          <div class="result">
@@ -79,6 +84,7 @@
             </div>
          </div>
        </div>
+
        <div class="result-container">
          <div class="result-index">6</div>
          <div class="result">
@@ -88,6 +94,7 @@
             </div>
          </div>
        </div>
+
        <div class="result-container">
          <div class="result-index">7</div>
          <div class="result">
@@ -97,6 +104,7 @@
             </div>
          </div>
        </div>
+
        <div class="result-container">
          <div class="result-index">8</div>
          <div class="result">
@@ -106,6 +114,7 @@
             </div>
          </div>
        </div>
+
        <div class="result-container">
          <div class="result-index">9</div>
          <div class="result">
@@ -115,6 +124,7 @@
             </div>
          </div>
        </div>
+
        <div class="result-container">
          <div class="result-index" id="test1">10</div>
          <div class="result">
@@ -131,7 +141,7 @@
   <script>
 
     function test(){
-      alert("ali is foool");
+      alert("JQ Test");
       $("#test").html("testtesttest")    
       }
 
