Hotfix : Fix for the profile page's close button
Fix for one of the missing JS fuctions int the profile page, causing the JS call not to be registed for the back sequence.

--- a/Frontend/profile.html
+++ b/Frontend/profile.html
@@ -33,7 +33,8 @@
                 </div>
               </div>
               <div class="close-profile">
-                <button type="button" class="close" onclick="goTo('results.html')" >
+                <button type="button" onclick="goTo('results.html')" >
+                
                   <img src="assets/close.svg"></button>
               </div>
             </div>
@@ -136,4 +137,11 @@
             </div>
         </div>
     </div>
+
+    <script>
+      function goTo(url)
+      {
+        location.replace(url);
+      }
+      </script>
 </div>
