Secondary Searches Structure & Addition of Hashtags

--- a/Frontend/profile.html
+++ b/Frontend/profile.html
@@ -45,7 +45,8 @@
                   <div class="result-container">
                     <div class="result-index">1</div>
                     <div class="result">
-                       <div class="result-title" onclick="showmodal()">Tweeter Handle:</div>
+                      <div class="results-title">Hashtag</div>
+                       <div class="result-title">Tweeter Handle:</div>
                        <div class="result-content">
                          Process the results using the Java 8+ Streams API to add hyperlinks to user names, locations (if available), and hashtags (used in the individual parts detailed below).Note: for this assignment, you do not need to stream updates to the user interface. In other words, thefront-end page is static until a “refresh” (or new search) is triggered.
                        </div>
@@ -54,6 +55,7 @@
                   <div class="result-container">
                     <div class="result-index">2</div>
                     <div class="result">
+                      <div class="results-title">Hashtag</div>
                        <div class="result-title">Tweeter Handle:</div>
                        <div class="result-content">
                          Process the results using the Java 8+ Streams API to add hyperlinks to user names, locations (if available), and hashtags (used in the individual parts detailed below).Note: for this assignment, you do not need to stream updates to the user interface. In other words, thefront-end page is static until a “refresh” (or new search) is triggered.
@@ -63,6 +65,7 @@
                   <div class="result-container">
                     <div class="result-index">3</div>
                     <div class="result">
+                      <div class="results-title">Hashtag</div>
                        <div class="result-title">Tweeter Handle:</div>
                        <div class="result-content">
                          Process the results using the Java 8+ Streams API to add hyperlinks to user names, locations (if available), and hashtags (used in the individual parts detailed below).Note: for this assignment, you do not need to stream updates to the user interface. In other words, thefront-end page is static until a “refresh” (or new search) is triggered.
@@ -72,6 +75,7 @@
                   <div class="result-container">
                     <div class="result-index">4</div>
                     <div class="result">
+                      <div class="results-title">Hashtag</div>
                        <div class="result-title">Tweeter Handle:</div>
                        <div class="result-content">
                          Process the results using the Java 8+ Streams API to add hyperlinks to user names, locations (if available), and hashtags (used in the individual parts detailed below).Note: for this assignment, you do not need to stream updates to the user interface. In other words, thefront-end page is static until a “refresh” (or new search) is triggered.
@@ -81,6 +85,7 @@
                   <div class="result-container">
                     <div class="result-index">5</div>
                     <div class="result">
+                      <div class="results-title">Hashtag</div>
                        <div class="result-title">Tweeter Handle:</div>
                        <div class="result-content">
                          Process the results using the Java 8+ Streams API to add hyperlinks to user names, locations (if available), and hashtags (used in the individual parts detailed below).Note: for this assignment, you do not need to stream updates to the user interface. In other words, thefront-end page is static until a “refresh” (or new search) is triggered.
@@ -90,6 +95,7 @@
                   <div class="result-container">
                     <div class="result-index">6</div>
                     <div class="result">
+                      <div class="results-title">Hashtag</div>
                        <div class="result-title">Tweeter Handle:</div>
                        <div class="result-content">
                          Process the results using the Java 8+ Streams API to add hyperlinks to user names, locations (if available), and hashtags (used in the individual parts detailed below).Note: for this assignment, you do not need to stream updates to the user interface. In other words, thefront-end page is static until a “refresh” (or new search) is triggered.
@@ -99,6 +105,7 @@
                   <div class="result-container">
                     <div class="result-index">7</div>
                     <div class="result">
+                      <div class="results-title">Hashtag</div>
                        <div class="result-title">Tweeter Handle:</div>
                        <div class="result-content">
                          Process the results using the Java 8+ Streams API to add hyperlinks to user names, locations (if available), and hashtags (used in the individual parts detailed below).Note: for this assignment, you do not need to stream updates to the user interface. In other words, thefront-end page is static until a “refresh” (or new search) is triggered.
@@ -108,6 +115,7 @@
                   <div class="result-container">
                     <div class="result-index">8</div>
                     <div class="result">
+                      <div class="results-title">Hashtag</div>
                        <div class="result-title">Tweeter Handle:</div>
                        <div class="result-content">
                          Process the results using the Java 8+ Streams API to add hyperlinks to user names, locations (if available), and hashtags (used in the individual parts detailed below).Note: for this assignment, you do not need to stream updates to the user interface. In other words, thefront-end page is static until a “refresh” (or new search) is triggered.
@@ -117,6 +125,7 @@
                   <div class="result-container">
                     <div class="result-index">9</div>
                     <div class="result">
+                      <div class="results-title">Hashtag</div>
                        <div class="result-title">Tweeter Handle:</div>
                        <div class="result-content">
                          Process the results using the Java 8+ Streams API to add hyperlinks to user names, locations (if available), and hashtags (used in the individual parts detailed below).Note: for this assignment, you do not need to stream updates to the user interface. In other words, thefront-end page is static until a “refresh” (or new search) is triggered.
@@ -126,9 +135,10 @@
                   <div class="result-container">
                     <div class="result-index">10</div>
                     <div class="result">
+                      <div class="results-title">Hashtag</div>
                        <div class="result-title">Tweeter Handle:</div>
                        <div class="result-content">
-                         Process the results using the Java 8+ Streams API to add hyperlinks to user names, locations (if available), and hashtags (used in the individual parts detailed below).Note: for this assignment, you do not need to stream updates to the user interface. In other words, thefront-end page is static until a “refresh” (or new search) is triggered.
+                         Process the results using the Java 8+tte: for this assignment, you do not need to stream updates to the user interface. In other words, thefront-end page is static until a “refresh” (or new search) is triggered.
                        </div>
                     </div>
                   </div>
